# aria

./: .gitignore  Dockerfile  eslint.config.mjs  index.html  next.config.ts  nginx.conf  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.api.json  tsconfig.json  vercel-build.sh  vite.config.js  vite.config.mjs  vitest.config.ts
.github/workflows/: docker.yml  lint.yml  playwright.yml
prisma/: schema.prisma
prisma/migrations/20241221071840_init/: migration.sql
src/: app.tsx  prisma.ts  server.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/[[...slugs]]/: route.ts
src/app/auth/[[...slugs]]/: route.ts
src/app/gallery/[id]/: page.tsx
src/app/gallery/[id]/upload/: page.tsx
src/app/login/: page.tsx
src/browser/: api.ts  auth.ts  blurhash.ts  env.ts
src/browser/worker/: image-props.ts  thumbnail.ts
src/components/core/: InfiniteScroll.tsx
src/controllers/: AppController.ts  ErrorHandler.ts
src/schema/: api.ts
src/services/: AuthService.test.ts  AuthService.ts  GalleryService.test.ts  GalleryService.ts  UserService.test.ts  UserService.ts
src/services/internal/: StorageService.ts
src/wasm/: Cargo.toml
src/wasm/src/: blurhash.rs  checksum.rs  enc.rs  lib.rs  props.rs  render.rs  thumb.rs  upload.rs
tests/: basic.spec.ts
