[package]
name = "ariax-wasm"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
image = "0.25.2"
base64 = "0.22.1"
wasm-bindgen = "0.2.92"
ehttp = {version = "0.5.0", features = ["multipart"]}
uuid = {version = "1.10.0", features = ["v4"]}
console_error_panic_hook = "0.1.7"
blurhash = { version = "0.2.3", default-features = false }
sha2 = "0.10.8"
hex = "0.4.3"
wasm-bindgen-futures = "0.4.43"
oneshot = "0.1.8"

[dependencies.web-sys]
version = "0.3.69"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'ImageData',
  'HtmlCanvasElement',
  'Window',
]
