[package]
name = "ariax-wasm"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
image = "0.25.2"
wasm-bindgen = "0.2.99"
console_error_panic_hook = "0.1.7"
blurhash = { version = "0.2.3", default-features = false }
sha2 = "0.10.8"
serde = { version = "1.0.216", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
wasm-bindgen-futures = "0.4.49"
